--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -23,3 +23,5 @@
 @import '../components/Upload/styles/index';
 // progress
 @import '../components/Progress/style/index';
+// breadcrumb
+@import '../components/Breadcrumb/styles/style';
