--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -25,3 +25,5 @@
 @import '../components/Progress/style/index';
 // breadcrumb
 @import '../components/Breadcrumb/styles/style';
+// backtop
+@import '../components/Backtop/styles/index';
