--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -27,3 +27,5 @@
 @import '../components/Breadcrumb/styles/index';
 // backtop
 @import '../components/Backtop/styles/index';
+// tabs
+@import '../components/Tabs/styles/index';
