--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -29,3 +29,5 @@
 @import '../components/Backtop/styles/index';
 // tabs
 @import '../components/Tabs/styles/index';
+// Pagination
+@import '../components/Pagination/styles/index';
