--- a/src/components/Pagination/styles/_index.scss
+++ b/src/components/Pagination/styles/_index.scss
@@ -16,8 +16,12 @@
       }
     }
     > .pagination-item a {
-      display: inline-block;
-      padding: 0 7px;
+      display: flex;
+      width: 22px;
+      height: 22px;
+      align-items: center;
+      justify-content: center;
+      // padding: 0 7px;
       text-decoration: none;
       border-radius: $border-radius-sm;
       &:hover {
