--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -31,3 +31,4 @@
 @import '../components/Tabs/styles/index';
 // Pagination
 @import '../components/Pagination/styles/index';
+@import '../components/Pagination/styles/simple';
